# aetherlogs

./: .gitignore  Makefile  README.md  devlog.md  docker-compose.yml  go.mod
api-gateway/cmd/server/: main.go
cmd/server/: main.go
parser-core/: Cargo.toml
parser-core/src/: gen_test  gen_test.rs  lib.rs  main.rs  model.rs  parser.rs  test.evtc
rust-analyzer/: Cargo.toml
web/: README.md  package-lock.json  package.json
