[package]
name = "aetherlogs-parser"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib creates a .a file for Go to link against
# cdylib creates a .so/.dll for dynamic loading
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"